force-app/main/default/objects/Retry_Config__mdt/Retry_Config__mdt.object-meta.xml
<CustomObject>
    <label>Retry Config</label>
    <pluralLabel>Retry Configs</pluralLabel>
</CustomObject>