force-app/main/default/objects/Retry_Config__mdt/fields/Max_Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Max_Retry_Count__c</fullName>
    <label>Max Retry Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>