force-app/main/default/objects/Retry_Config__mdt/fields/Retry_Interval_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Retry_Interval_In_Minutes__c</fullName>
    <label>Retry Interval (In Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>