force-app/main/default/objects/Retry_Config__mdt/fields/Start_First_Retry_After_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Start_First_Retry_After_In_Minutes__c</fullName>
    <label>Start First Retry After (In Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>