force-app/main/default/objects/Retry_Config__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Max_Retry_Count__c</columns>
    <columns>Method_Name__c</columns>
    <columns>Process_Name__c</columns>
    <columns>Retry_Interval_In_Minutes__c</columns>
    <columns>Start_First_Retry_After_In_Minutes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>